@@ -3,18 +3,12 @@ ob_start();
 try {
 
 require 'inc/init.php';
-$_REQUEST['page'] = 'perms';
-$_REQUEST['tab'] = 'edit';
+$pageno = 'perms';
+$tabno = 'edit';
 fixContext();
 
-// We have a chance to handle an error before starting HTTP header.
 if (!permitted())
 {
-	$errlog = array
-	(
-		'v' => 2,
-		'm' => array (0 => array ('c' => 157)) // operation not permitted
-	);
 	echo "NAK\nPermission denied";
 	exit();
 }
@@ -37,6 +31,5 @@ catch (Exception $e)
 	ob_end_clean();
 	printException($e);
 }
-
 
 ?>
