@@ -415,6 +415,7 @@ $tab['file']['edit'] = 'Properties';
 $tab['file']['tags'] = 'Tags';
 $tab['file']['editText'] = 'Edit text';
 $tab['file']['replaceData'] = 'Upload replacement';
+$tab['file']['download'] = 'Download';
 $trigger['file']['tags'] = 'trigger_tags';
 $trigger['file']['editText'] = 'trigger_file_editText';
 $tabhandler['file']['default'] = 'renderFile';
@@ -422,6 +423,7 @@ $tabhandler['file']['edit'] = 'renderFileProperties';
 $tabhandler['file']['tags'] = 'renderEntityTags';
 $tabhandler['file']['editText'] = 'renderTextEditor';
 $tabhandler['file']['replaceData'] = 'renderFileReuploader';
+$tabhandler['file']['download'] = 'renderFileDownloader';
 $ophandler['file']['edit']['updateFile'] = 'updateFile';
 $ophandler['file']['tags']['saveTags'] = 'saveEntityTags';
 $ophandler['file']['editText']['updateFileText'] = 'updateFileText';
