@@ -7,6 +7,7 @@
 	bugfix: rack row removal sometimes failed (by Marcin Suchocki)
 	bugfix: improve usage counters for IPv4 networks
 	bugfix: make ADDNEW_AT_TOP options really work everywhere (ticket:213)
+	bugfix: authorize file preview as a download (ticket:241)
 0.17.2 2009-07-22
 	new feature: configure default SNMP community (by jthurman)
 	new feature: "$untagged", "$portless", "$nameless" and "$masklen_OP_NN" autotags
